# trial-truthfulness-atlas

./: .gitignore  E156-PROTOCOL.md  FORKING.md  README.md  push.sh  pyproject.toml  requirements.txt
baseline/: cardio_v0.1.0.json
docs/: index.html  verification.html
docs/site/: index.html  verification.html
docs/superpowers/plans/: 2026-04-29-trial-truthfulness-atlas-v0.1.0.md
docs/superpowers/specs/: 2026-04-29-trial-truthfulness-atlas-design.md
src/tta/: __init__.py  aggregate.py  bridge.py  cardio_filter.py  cli.py  config.py  ingest.py  meta.py  pipeline.py  preflight.py
src/tta/dashboards/: atlas_dashboard.py  verification_ui.py
src/tta/data/: cochrane_heart_review_dois.txt
src/tta/flags/: direction_concordance.py  n_drift.py  outcome_drift.py  results_posting.py
src/tta/judge/: cache.py  ollama_client.py  prompts.py
tests/: conftest.py  test_aggregate.py  test_baseline.py  test_bridge.py  test_bridge_methods24.py  test_cardio_filter.py  test_cli.py  test_config.py  test_dashboard_render.py  test_flag_direction_concordance.py  test_flag_n_drift.py  test_flag_outcome_drift.py  test_flag_results_posting.py  test_ingest_aact.py  test_ingest_pairwise70.py  test_integration_5trial.py  test_judge_cache.py  test_judge_ollama.py  test_judge_prompts.py  test_meta.py  test_pipeline_multi_hr.py  test_preflight.py  test_verification_render.py
tests/fixtures/: README.md  _make_pairwise70_sample.py  cardio_5_trials.json  dossiergap_sample.csv
tests/fixtures/aact_sample/: browse_conditions.txt  calculated_values.txt  design_outcomes.txt  id_information.txt  (+4 more)
(+6 files in other folders)
